--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@ style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>This is a new line of code.</p>
 
+<p>Thus us a test</p>
+
 </body>
 </html>
